--- a/src/main/resources/public/styles.css
+++ b/src/main/resources/public/styles.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -14,7 +18,7 @@ form {
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
+    max-width: 450px;
     width: 100%;
 }
 
@@ -104,8 +108,17 @@ p {
     background-color: #0056b3;
 }
 
+.checkbox-label {
+    display: grid;
+    grid-template-columns: auto 1fr;
+
+    gap: 10px;
+}
+
+
 #error-message {
     color: red;
     font-size: 14px;
     margin-top: 10px;
 }
+
